# bastion-xolot

./: .env.example  .gitignore  README.md
backend/: package-lock.json  package.json
backend/src/: config.ts  server.ts
backend/src/db/: db.ts  schema.sql
backend/src/realtime/: websocket.ts
backend/src/routes/: alerts.ts  auth.ts  devices.ts  enforcement.ts  events.ts  health.ts
backend/src/services/: alert_service.ts  consistency_service.ts  correlation_service.ts  device_service.ts  enforcement_service.ts  event_service.ts  plain_english.ts
backend/src/utils/: logger.ts
edge/agent/: pyproject.toml
edge/agent/bastion_agent/: __init__.py  anomaly.py  audit.py  baseline.py  config.py  decision_engine.py  detection.py  device_registry.py  discovery.py  dns_monitor.py  enforcement.py  enforcement_apply.py  enforcement_plan.py  enforcement_runtime.py  event_loop.py  events.py  flow_summary.py  gateway_probe_monitor.py  main.py  mdns.py  nft_state.py  oui.py  reconcile.py  reconcile_loop.py  sample_eve.jsonl  state.py  storage.py  suricata_adapter.py  utils.py
infra/scripts/: setup_dns_sinkhole.sh
infra/systemd/: bastion-agent.service  bastion-api.service
mobile/: .gitignore  app.json  package-lock.json  package.json
mobile/android/app/: build.gradle
mobile/ios/mobile/: Info.plist
mobile/src/: App.tsx
mobile/src/api/: client.ts
shared/schemas/: alert.schema.json  device.schema.json  enforcement.schema.json  enforcement_transaction.schema.json  event.schema.json
shared/types/: alert.ts  device.ts  enforcement.ts  event.ts
(+18 files in other folders)
